<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知识管理平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="tab_me">我</string>
	<string name="tab_home">首页</string>
	<string name="tab_category">分类</string>
	<string name="pasw_remember">记住密码</string>
	<string name="auto_login">自动登录</string>
	<string name="login">登录</string>
	<string name="cate_header">分类>></string>
	<string name="user_image">用户头像</string>
	<string name="user_name">用户名:</string>
	<string name="gender">性   别:</string>
	<string name="exit_text">退出当前用户</string>
	
</resources>
