<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_userinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical"
    android:clickable="true"
    android:paddingTop="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_preference_normal"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_preference_first_normal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/info_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/ic_preference_last_normal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    android:textSize="18sp" />

               
                <TextView
                    android:id="@+id/info_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:inputType="none"
                    android:textSize="18sp" />
            </LinearLayout>

           

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/info_exit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center"
                android:text="@string/exit_text"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>